Use mysql DB, add one more link to nav menu

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,9 +9,17 @@ default: &default
   pool: 5
   timeout: 5000
 
+#development:
+#  <<: *default
+#  database: db/development.sqlite3
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: home_automation
+  pool: 5
+  username: home_auto_user
+  password: N3@Fd7nSwl#69$w
+  socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
