Moved Thesis files to another repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-# project private files
+# Project private files
 /config/secrets.yml
-
-# custom project ignore
-to-do.list
 
 # rails sqlite db
 /db/*.sqlite3
@@ -12,7 +9,7 @@ to-do.list
 /.idea
 /nbproject
 
-#tmp files
+# Temporary files
 *.bak
 *~
 *autosave
