Small fixes in config files

--- a/config/secrets.yml.sample
+++ b/config/secrets.yml.sample
@@ -11,30 +11,30 @@
 # if you're sharing your code publicly.
 
 development:
-  secret_key_base: ena_dio_tria!
-  devise_secret_key: development_mode_for_devise
-  secret_token: toekn_is_higly_secure
+  secret_key_base: 'ena_dio_tria!'
+  devise_secret_key: 'development_mode_for_devise'
+  secret_token: 'toekn_is_higly_secure'
   mail:
-    username:
-    pass:
+    username: 'asdf'
+    pass: 'asfdsdf'
     domain:
   database:
-    username:
-    password:
+    username: 'asfsdf'
+    password: 'asdfsdf'
 
 test:
-  secret_key_base: asfales_key
+  secret_key_base: 'asfales_key'
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  secret_key_base: adfasdfdsfdsf #<%= ENV["SECRET_KEY_BASE"] %>
-  devise_secret_key:
-  secret_token: toekn_is_higly_secure_for_production_mode
+  secret_key_base: 'adfasdfdsfdsf' #<%= ENV["SECRET_KEY_BASE"] %>
+  devise_secret_key: 'sdfsdfsd'
+  secret_token: 'toekn_is_higly_secure_for_production_mode'
   mail:
-    username:
-    pass:
-    domain:
+    username: 'asdfsdf'
+    pass: 'asdfasf'
+    domain: 'sdfsdf'
   database:
-    username:
-    password:
+    username: 'sdfasdf'
+    password: 'asdfsdf'
