--- a/config/database.yml
+++ b/config/database.yml
@@ -15,8 +15,8 @@ default_mysql: &default_mysql
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: <%= Rails.application.secrets[:database][:username] %>
-  password: <%= Rails.application.secrets[:database][:password] %>
+  username: <%= Rails.application.secrets.database['username'] %>
+  password: <%= Rails.application.secrets.database['password'] %>
   socket: /var/run/mysqld/mysqld.sock
 
 #development:
