Fix installation notes | Remove configs to secrets | Prepare quick buttons migration

--- a/config/secrets.yml.sample
+++ b/config/secrets.yml.sample
@@ -11,10 +11,19 @@
 # if you're sharing your code publicly.
 
 development:
+  site:
+    host: 'application.domain'
+    port:
+	configs:
+		web_console_whitelist_ips: [] # array of strings with ip, see web-console doc for help
+    time_diff_to_consider_device_as_active_in_seconds: 300
+    device_detail_show_view_update_interval_in_seconds: 65
   secret_key_base: 'ena_dio_tria!'
   devise_secret_key: 'development_mode_for_devise'
   secret_token: 'toekn_is_higly_secure'
   mail:
+    host: 'smtp.gmail.com'
+    port: '587'
     username: 'asdf'
     pass: 'asfdsdf'
     domain:
@@ -23,15 +32,31 @@ development:
     password: 'asdfsdf'
 
 test:
+  site:
+    host: 'application.domain'
+    port:
+	configs:
+		web_console_whitelist_ips: [] # array of strings with ip, see web-console doc for help
+    time_diff_to_consider_device_as_active_in_seconds: 300
+    device_detail_show_view_update_interval_in_seconds: 65
   secret_key_base: 'asfales_key'
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
+  site:
+    host: 'application.domain'
+    port:
+	configs:
+		web_console_whitelist_ips: [] # array of strings with ip, see web-console doc for help
+    time_diff_to_consider_device_as_active_in_seconds: 300
+    device_detail_show_view_update_interval_in_seconds: 65
   secret_key_base: 'adfasdfdsfdsf' #<%= ENV["SECRET_KEY_BASE"] %>
   devise_secret_key: 'sdfsdfsd'
   secret_token: 'toekn_is_higly_secure_for_production_mode'
   mail:
+    host: 'smtp.gmail.com'
+    port: '587'
     username: 'asdfsdf'
     pass: 'asdfasf'
     domain: 'sdfsdf'
