Fix render | Fix device attributes display | Naming fixes

--- a/config/secrets.yml.sample
+++ b/config/secrets.yml.sample
@@ -11,6 +11,9 @@
 # if you're sharing your code publicly.
 
 development:
+  mqtt:
+    host: 'home-auto.eu'
+    port: 1883
   site:
     host: 'application.domain'
     port:
@@ -44,6 +47,9 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
+  mqtt:
+    host: 'home-auto.eu'
+    port: 1883
   site:
     host: 'application.domain'
     port:
