Prepare for sending email when device is offline for long time

--- a/config/secrets.yml.sample
+++ b/config/secrets.yml.sample
@@ -21,6 +21,7 @@ development:
 		web_console_whitelist_ips: [] # array of strings with ip, see web-console doc for help
     time_diff_to_consider_device_as_active_in_seconds: 300
     device_detail_show_view_update_interval_in_seconds: 65
+    send_email_notification_after_device_offine_period_in_minutes: 60
   secret_key_base: 'ena_dio_tria!'
   devise_secret_key: 'development_mode_for_devise'
   secret_token: 'toekn_is_higly_secure'
@@ -28,6 +29,7 @@ development:
     host: 'smtp.gmail.com'
     port: '587'
     username: 'asdf'
+    from: 'asdf'
     pass: 'asfdsdf'
     domain:
   database:
@@ -42,6 +44,7 @@ test:
 		web_console_whitelist_ips: [] # array of strings with ip, see web-console doc for help
     time_diff_to_consider_device_as_active_in_seconds: 300
     device_detail_show_view_update_interval_in_seconds: 65
+    send_email_notification_after_device_offine_period_in_minutes: 60
   secret_key_base: 'asfales_key'
 
 # Do not keep production secrets in the repository,
@@ -57,6 +60,7 @@ production:
 		web_console_whitelist_ips: [] # array of strings with ip, see web-console doc for help
     time_diff_to_consider_device_as_active_in_seconds: 300
     device_detail_show_view_update_interval_in_seconds: 65
+    send_email_notification_after_device_offine_period_in_minutes: 60
   secret_key_base: 'adfasdfdsfdsf' #<%= ENV["SECRET_KEY_BASE"] %>
   devise_secret_key: 'sdfsdfsd'
   secret_token: 'toekn_is_higly_secure_for_production_mode'
@@ -64,6 +68,7 @@ production:
     host: 'smtp.gmail.com'
     port: '587'
     username: 'asdfsdf'
+    from: 'asdf'
     pass: 'asdfasf'
     domain: 'sdfsdf'
   database:
