Update secrets example

--- a/config/secrets.yml.sample
+++ b/config/secrets.yml.sample
@@ -35,6 +35,8 @@ development:
   database:
     username: 'asfsdf'
     password: 'asdfsdf'
+		db_name: 'auto_db'
+		db_socket: '/var/run/mysqld/mysqld.sock'
 
 test:
   site:
@@ -74,3 +76,5 @@ production:
   database:
     username: 'sdfasdf'
     password: 'asdfsdf'
+		db_name: 'auto_db'
+		db_socket: '/var/run/mysqld/mysqld.sock'
