--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "3.3.7",
     "eonasdan-bootstrap-datetimepicker": "4.17.47",
     "fullcalendar": "3.4.0",
+    "highcharts": "^5.0.14",
     "jquery": "3.2.1",
     "jquery-ujs": "1.2.2",
     "moment": "2.18.1",
