--- a/src/DeviceSecrets.h.example
+++ b/src/DeviceSecrets.h.example
@@ -1,1 +1,16 @@
-const char DEVICE_ACCESS_TOKEN[] = "asdfasdfsdfsdfasdf";
+#include <avr/pgmspace.h>
+
+// device information
+const char DEVICE_SERIAL_NUMBER[] =  "123456";
+const char DEVICE_ACCESS_TOKEN[] = "asdfasdf";
+
+// application server information
+const char applicationServerUrl[] = "local.domain";
+const unsigned int applicationServerPort = 1234;
+const char mqttServerUrl[] = "local.domain";
+const unsigned int mqttServerPort = 1883;
+const unsigned int localUdpPort = 8888;  // local port to listen for UDP packets
+const PROGMEM char apiBaseUrl[] = "/api/v1/devices";
+const PROGMEM char deviceDataRequestUri[] = "/get_info?";
+const PROGMEM char deviceInfosUpdateUri[] = "/infos_update";
+const PROGMEM char deviceAttributesUpdateUri[] = "/attributes_status_update";
