Move ntpAddress to secrets

--- a/src/DeviceSecrets.h.example
+++ b/src/DeviceSecrets.h.example
@@ -1,8 +1,12 @@
 #include <avr/pgmspace.h>
 
 // device information
-const char DEVICE_SERIAL_NUMBER[] =  "123456";
+const char DEVICE_SERIAL_NUMBER[] =  "123456"; // Put device UID from application here
 const char DEVICE_ACCESS_TOKEN[] = "asdfasdf";
+
+// time settings
+const int timeZone = 2; // Athens (consider DST changes)
+const byte ntpTimeServerAddress[] = {192, 168, 1, 1};
 
 // application server information
 const char applicationServerUrl[] = "local.domain";
